Se anadio la capacidad de quemar los fusibles si las dos cargas chocan en una misma columna o bus.